--- a/src/templates/base_auth.html
+++ b/src/templates/base_auth.html
@@ -20,23 +20,13 @@
   </head>
   <body>
 
+    <main role="main">
 
-<div class="container-fluid">
-  <div class="row">
-
-    <main class="col-md-12">
-
-      <div class="card">
-      </div>
-
-      <div class="col-md-3"> </div>
-      <div class="col-md-6">
+      
       {% block content %}
 
       {% endblock%}
-      </div>
-      <div class="col-md-3"> </div>
-
+  
     </main>
   </div>
 </div>
