--- a/src/templates/components/side_bar.html
+++ b/src/templates/components/side_bar.html
@@ -11,7 +11,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <a class="nav-link" href="{% url 'expenses' %}">
               Expenses
             </a>
           </li>
@@ -43,5 +43,25 @@
           </li>
 
         </ul>
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Settings</span>
+                    <a class="link-secondary" href="#" aria-label="Add a new report">
+                
+                    </a>
+                </h6>
+                <ul class="nav flex-column mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'preferences' %}">
+                            General
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            Account settings
+                        </a>
+                    </li>
+                
+                </ul>
       </div>
     </nav>
